file inclusion of packages fixed

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
-recursive-include tf/convert/app *
-recursive-include tf/tools/tei *
-recursive-include tf/tools/trang *
-recursive-include tf/tools/jing *
+recursive-include tff/convert/app *
+recursive-include tff/tools/tei *
+recursive-include tff/tools/trang *
+recursive-include tff/tools/jing *
 recursive-exclude __pycache__ *
 prune */docs
