--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = text-fabric-factory
-version = 1.0.0
+version = 1.0.1
 description = Factory for Text-Fabric datasets
 long_description = file README.md
 author = Dirk Roorda
@@ -51,7 +51,7 @@ packages =
 
 [options.exclude_package_data]
 * =
-    text_fabric.egg-info
+    text_fabric-factory.egg-info
     __pycache__
     .DS_Store
     docs
