iiif: fill in dummies; support hires/lowres switch

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ packages =
     tff.convert
     tff.convert.app
     tff.convert.app.static
+    tff.convert.fof
     tff.tools
     tff.tools.tei
     tff.tools.trang
