license spec updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,12 @@
 [metadata]
 name = text-fabric-factory
-version = 1.0.3
+version = 1.0.4
 description = Factory for Text-Fabric datasets
 long_description = file README.md
 author = Dirk Roorda
 author_email = dirk.roorda@di.huc.knaw.nl
 url = https://github.com/annotation/text-fabric-factory
+license = MIT
 
 classifiers =
     Development Status :: 4 - Beta
@@ -14,7 +15,6 @@ classifiers =
     Intended Audience :: Developers
     Intended Audience :: Education
     Intended Audience :: Science/Research
-    License :: OSI Approved :: MIT License
     Natural Language :: English
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows :: Windows 10
@@ -45,7 +45,6 @@ packages =
     tff.convert
     tff.convert.app
     tff.convert.app.static
-    tff.convert.fof
     tff.tools
     tff.tools.tei
     tff.tools.trang
