--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include tff/convert/mirador.html *
+recursive-include tff/convert/fof *
 recursive-include tff/convert/app *
 recursive-include tff/tools/tei *
 recursive-include tff/tools/trang *
