updated email address

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 1.0.6
 description = Factory for Text-Fabric datasets
 long_description = file README.md
 author = Dirk Roorda
-author_email = dirk.roorda@di.huc.knaw.nl
+author_email = droorda.it@icloud.com
 url = https://github.com/annotation/text-fabric-factory
 license = MIT
 
@@ -51,7 +51,7 @@ packages =
 
 [options.exclude_package_data]
 * =
-    text_fabric-factory.egg-info
+    text_fabric_factory.egg-info
     __pycache__
     .DS_Store
     docs
